5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1664_2971.log
== TEST (2019-04-16 10:17:06) 
-- CODE:
j = float(input("taxa de juros: "))
va = float(input("valor do apartamento: "))

qf = q0*(1 + j)**36
q0 = 1.500
print(qf)

if(qf >= va):
	print("Sim")
else:
	print("Nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    qf = q0*(1 + j)**36
NameError: name 'q0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:17:36) 
-- CODE:
j = float(input("taxa de juros: "))
va = float(input("valor do apartamento: "))
qo = 1.500
qf = q0*(1 + j)**36

print(qf)

if(qf >= va):
	print("Sim")
else:
	print("Nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    qf = q0*(1 + j)**36
NameError: name 'q0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:18:01) 
-- CODE:
j = float(input("taxa de juros: "))
va = float(input("valor do apartamento: "))
q0 = 1.500
qf = q0*(1 + j)**36

print(qf)

if(qf >= va):
	print("Sim")
else:
	print("Nao")
-- OUTPUT:
14365.50275713173
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:18:30) 
-- CODE:
j = float(input("taxa de juros: "))
va = float(input("valor do apartamento: "))
q0 = 1.500
qf = q0*(1 + j)**36

print(round(qf,2)

if(qf >= va):
	print("Sim")
else:
	print("Nao")
-- ERROR:
File "XXXX", line 8
    if(qf >= va):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:19:00) 
-- CODE:
j = float(input("taxa de juros: "))
va = float(input("valor do apartamento: "))
q0 = 1.500
qf = q0*(1 + j)**36

print(round(qf,2)

if(qf >= va):
	print("Sim")
else:
	print("Nao")
-- ERROR:
File "XXXX", line 8
    if(qf >= va):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:19:24) 
-- CODE:
j = float(input("taxa de juros: "))
va = float(input("valor do apartamento: "))
q0 = 1.500
qf = q0*(1 + j)**36

#print(round(qf,2)
print(qf)
if(qf >= va):
	print("Sim")
else:
	print("Nao")
-- OUTPUT:
14365.50275713173
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:20:31) 
-- CODE:
j = float(input("taxa de juros: "))
va = float(input("valor do apartamento: "))
q0 = 1500
qf = q0*(1 + j)**36

#print(round(qf,2)
print(qf)
if(qf >= va):
	print("Sim")
else:
	print("Nao")
-- OUTPUT:
14365502.75713173
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:20:53) 
-- CODE:
j = float(input("taxa de juros: "))
va = float(input("valor do apartamento: "))
q0 = 1500
qf = q0*(1 + j)**36

print(round(qf,2)

if(qf >= va):
	print("Sim")
else:
	print("Nao")
-- ERROR:
File "XXXX", line 8
    if(qf >= va):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:21:32) 
-- CODE:
j = float(input("taxa de juros: "))
va = float(input("valor do apartamento: "))
q0 = 1500
qf = round(q0*(1 + j)**36,2)

print(qf)

if(qf >= va):
	print("Sim")
else:
	print("Nao")
-- OUTPUT:
14365502.76
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:21:41) 
-- CODE:
j = float(input("taxa de juros: "))
va = float(input("valor do apartamento: "))
q0 = 1500
qf = round(q0*(1 + j)**36,2)

print(qf)

if(qf >= va):
	print("Sim")
else:
	print("Nao")
-- EXECUTION TIME:
0.104197
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
14365502.76
Sim
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
229727.78
Nao
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
1063202.81
Sim
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
